<package format="2">
  <name>hephaestus_description</name>
  <version>0.1.0</version>
  <description>
    <p>URDF Description package for Hephaestus</p>
  </description>

  <maintainer email="hanzhengxiao@hzx.blue">Zhengxiao Han</maintainer>
  <author email="hanzhengxiao@hzx.blue">Zhengxiao Han</author>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <export>
    <architecture_independent />
  </export>
</package>
